--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.3
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  super_drag_and_drop: ^0.8.17
 
 dev_dependencies:
   flutter_test:
