--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "unexposed_app",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#E91E63",
+    "theme_color": "#E91E63",
     "description": "Unexposed yourself",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
